--- a/TravelLive/View/Map/PlaceEventViewImageCell.xib
+++ b/TravelLive/View/Map/PlaceEventViewImageCell.xib
@@ -9,15 +9,20 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="281" id="KGk-i7-Jjw" customClass="PlaceEventViewImageCell" customModule="TravelLive" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="281"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="315" id="KGk-i7-Jjw" customClass="PlaceEventViewImageCell" customModule="TravelLive" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="315"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="281"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="315"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="94P-qD-aYQ">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="281"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="94P-qD-aYQ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="320"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="320" id="12D-m8-ztx"/>
+                            <constraint firstAttribute="width" secondItem="94P-qD-aYQ" secondAttribute="height" multiplier="1:1" id="5h1-VK-7MU"/>
+                            <constraint firstAttribute="height" constant="320" id="lf9-WH-5Ri"/>
+                        </constraints>
                     </imageView>
                 </subviews>
                 <constraints>
@@ -31,7 +36,7 @@
             <connections>
                 <outlet property="showImageView" destination="94P-qD-aYQ" id="kvQ-MY-6Hd"/>
             </connections>
-            <point key="canvasLocation" x="131.8840579710145" y="90.066964285714278"/>
+            <point key="canvasLocation" x="131.8840579710145" y="101.45089285714285"/>
         </tableViewCell>
     </objects>
 </document>
