--- a/TravelLive/View/Map/PlaceEventViewLocationCell.xib
+++ b/TravelLive/View/Map/PlaceEventViewLocationCell.xib
@@ -9,11 +9,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="93" id="KGk-i7-Jjw" customClass="PlaceEventViewLocationCell" customModule="TravelLive" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="93"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="83" id="KGk-i7-Jjw" customClass="PlaceEventViewLocationCell" customModule="TravelLive" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="83"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="93"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="83"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VfB-ei-cqG">
@@ -38,6 +38,7 @@
                     </imageView>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="bottom" secondItem="xOT-3I-i9f" secondAttribute="bottom" constant="8" id="09U-G9-Gng"/>
                     <constraint firstItem="x72-Rz-k9U" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="875-6Y-Koa"/>
                     <constraint firstItem="xOT-3I-i9f" firstAttribute="top" secondItem="VfB-ei-cqG" secondAttribute="bottom" constant="16" id="Bkh-Iw-gNR"/>
                     <constraint firstItem="VfB-ei-cqG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="LF0-c7-d2P"/>
@@ -53,7 +54,7 @@
                 <outlet property="locationTitleLabel" destination="VfB-ei-cqG" id="RIQ-gG-mNJ"/>
                 <outlet property="mapImageView" destination="x72-Rz-k9U" id="Sit-tj-IrN"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="148.32589285714286"/>
+            <point key="canvasLocation" x="137.68115942028987" y="144.97767857142856"/>
         </tableViewCell>
     </objects>
 </document>
