--- a/TravelLive/View/Map/PlaceEventViewTitleCell.xib
+++ b/TravelLive/View/Map/PlaceEventViewTitleCell.xib
@@ -12,13 +12,16 @@
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="68" id="KGk-i7-Jjw" customClass="PlaceEventViewTitleCell" customModule="TravelLive" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="68"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="68"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OR0-rb-JgA">
-                        <rect key="frame" x="32" y="0.0" width="288" height="68"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OR0-rb-JgA">
+                        <rect key="frame" x="16" y="0.0" width="304" height="70"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="70" id="RER-pU-X7m"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -27,14 +30,14 @@
                     <constraint firstItem="OR0-rb-JgA" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="50p-rJ-HdV"/>
                     <constraint firstAttribute="trailing" secondItem="OR0-rb-JgA" secondAttribute="trailing" id="e3l-Ka-BKN"/>
                     <constraint firstAttribute="bottom" secondItem="OR0-rb-JgA" secondAttribute="bottom" id="pYd-9y-JIy"/>
-                    <constraint firstItem="OR0-rb-JgA" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="32" id="vRM-Sx-bSv"/>
+                    <constraint firstItem="OR0-rb-JgA" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="vRM-Sx-bSv"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="titleLabel" destination="OR0-rb-JgA" id="GkP-Nd-gDr"/>
             </connections>
-            <point key="canvasLocation" x="-100" y="122"/>
+            <point key="canvasLocation" x="-100.00000000000001" y="121.875"/>
         </tableViewCell>
     </objects>
 </document>
